force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Material_Cost_w_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Cost_w_Sales_Tax__c</fullName>
    <formula>Total_Material_Premium__c  * ( 1+ Sales_Tax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Material Cost w.Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>