force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Material_O_P_Cost_Adj__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_O_P_Cost_Adj__c</fullName>
    <formula>IF(Item_Type__c ==&apos;Assemblies&apos;, (Material_Assembly_Cost__c * Quantity__c),((Material_Adj__c * DES_Lookup_Detail__r.Material_Unit_O_P_Cost__c ))) * Location_Multiplier_wf__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Material O&amp;P Cost Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>