force-app/main/default/objects/NCMT_DES_Items__c/fields/Total_Material_Premium__c.field-meta.xml
<CustomField>
    <fullName>Total_Material_Premium__c</fullName>
    <description>Total Material Inc Material Project Premium Markup.</description>
    <formula>Total_Material_Cost_Adj__c  * ( Material_Project_Premium_Markup__c  + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Material Inc Material Project Premium Markup.</inlineHelpText>
    <label>Total Material Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>