force-app/main/default/objects/NCMT_DES_Items__c/fields/Tree_structure__c.field-meta.xml
<CustomField>
    <fullName>Tree_structure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tree structure</label>
    <referenceTo>NCMT_Tree_structure__c</referenceTo>
    <relationshipLabel>NCMT DES Items</relationshipLabel>
    <relationshipName>NCMT_DES_Items</relationshipName>
    <type>Lookup</type>
</CustomField>