force-app/main/default/objects/NCMT_DES_Items__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>