force-app/main/default/objects/NCMT_DES_Items__c/fields/Waste_Factor__c.field-meta.xml
<CustomField>
    <fullName>Waste_Factor__c</fullName>
    <label>Waste Factor %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>