force-app/main/default/objects/NCMT_DES_Items__c/recordTypes/NCMT_DES_Item_Master_Format.recordType-meta.xml
<RecordType>
    <fullName>NCMT_DES_Item_Master_Format</fullName>
    <active>true</active>
    <label>NCMT DES Item Master Format</label>
</RecordType>