force-app/main/default/objects/NCMT_DES_Items__c/recordTypes/NCMT_DES_Item_Uniformat.recordType-meta.xml
<RecordType>
    <fullName>NCMT_DES_Item_Uniformat</fullName>
    <active>true</active>
    <label>NCMT DES Item Uniformat</label>
</RecordType>