force-app/main/default/objects/NCMT_DES_Items__c/recordTypes/NCMT_DES_Item_Uniformat_O_P.recordType-meta.xml
<RecordType>
    <fullName>NCMT_DES_Item_Uniformat_O_P</fullName>
    <active>true</active>
    <description>For O&amp;P Cost depending on project delivery method</description>
    <label>NCMT DES Item Uniformat O&amp;P</label>
</RecordType>