force-app/main/default/objects/NCMT_DES_Items__c/validationRules/Check_for_Include_Location_Factor.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Include_Location_Factor</fullName>
    <active>true</active>
    <errorConditionFormula>Cost_Category_Type__c == &apos;GSA Assemblies&apos; &amp;&amp;  ISCHANGED(Include_Location_Factor__c) &amp;&amp;  $Profile.Name &lt;&gt; &apos;GSA System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Include_Location_Factor__c</errorDisplayField>
    <errorMessage>Include Location Factor change doesn&apos;t apply for Express Menu Items</errorMessage>
</ValidationRule>