force-app/main/default/objects/NCMT_DES_Items__c/validationRules/Check_for_NCMT_Labor_Resources.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_NCMT_Labor_Resources</fullName>
    <active>true</active>
    <description>If NCMT Labor Resources is not null, Crew Master should not be populated.</description>
    <errorConditionFormula>AND(
ISCHANGED ( NCMT_Crew_Master__c ),
(ISBLANK(PRIORVALUE(NCMT_Crew_Master__c ))),
 NCMT_Labor_Resources__c !=null
)</errorConditionFormula>
    <errorDisplayField>NCMT_Crew_Master__c</errorDisplayField>
    <errorMessage>NCMT Crew Master cannot be populated for this Item, since Labor Resource exists.</errorMessage>
</ValidationRule>