force-app/main/default/objects/NCMT_DES_Items__c/validationRules/Last_digit_x.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_digit_x</fullName>
    <active>true</active>
    <description>If line item number edited, last digit must be x</description>
    <errorConditionFormula>AND(ISCHANGED(CSI_Line_Item_Number__c ), 
REGEX(CSI_Line_Item_Number__c ,&quot;[^x]*$&quot;)
)</errorConditionFormula>
    <errorDisplayField>CSI_Line_Item_Number__c</errorDisplayField>
    <errorMessage>Last digit of Line Item Number must be x</errorMessage>
</ValidationRule>