force-app/main/default/objects/NCMT_DES_Items__c/validationRules/Total_Direct_Cost_greater_than_Min_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Direct_Cost_greater_than_Min_Cost</fullName>
    <active>false</active>
    <description>For GSA Assemblies, Total Direct Cost must be greater than the Minimum Cost of the related Assembly Master</description>
    <errorConditionFormula>IF( (NCMT_Assembly_Master__r.File_Type__c  = &apos;GSAAssemblies&apos; &amp;&amp;  ISBLANK(Total_Direct_Cost__c)) , TRUE, FALSE)</errorConditionFormula>
    <errorMessage>Total Cost for this item must be greater than Minimum Cost</errorMessage>
</ValidationRule>