force-app/main/default/objects/NCMT_DES_Items__c/validationRules/Waste_Factor_20.validationRule-meta.xml
<ValidationRule>
    <fullName>Waste_Factor_20</fullName>
    <active>true</active>
    <description>Require comment if waste factor is greater than 20</description>
    <errorConditionFormula>AND(
OR(
(ISBLANK(Comments__c)),
(NOT(ISCHANGED(Comments__c)))
),
AND(Waste_Factor__c &gt; 0.20,
(ISCHANGED(Waste_Factor__c)))

)</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Comment required to change Waste Factor above 20%</errorMessage>
</ValidationRule>